Closed Bug 42871 Opened 25 years ago Closed 25 years ago

character code warning on Send in a message (HTML to Plain Text)

Categories

(MailNews Core :: Internationalization, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: tarahim, Assigned: nhottanscp)

Details

(Whiteboard: nsbeta3+)

Attachments

(2 files)

The minimal steps to get the warning that characters not in the specified code is in the message: 1)New Message. 2)Type two ASCII spaces in the beginning of the body. 3)Type return. 4)Options|Format|Plain Text only 5)Send That did it in 2000061508M17 MacOS. Could be a duplicate of 42777. MIME is on. Spell Check is off. Default coding is ISO-2022-JP. Occurred regardless of the workaround in 41637. IME was not used throughout the typing.
I can reproduce this.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Here is a text (in unicode) returned from the editor. Since the mail was composed as HTML, this is a correct text. There are a non breaking space and a space starting at 058769E4. The nbsp will be converted to a space before the mail is sent as Plain text. I think the problem is the out of range check is done too early before the nbsp is converted to sp. Since nbsp cannot be encoded in ISO-2022-JP and we see the dialog. 05876940 3C 00 21 00 44 00 4F 00 43 00 54 <.!.D.O.C.T 0587694B 00 59 00 50 00 45 00 20 00 48 00 .Y.P.E. .H. 05876956 54 00 4D 00 4C 00 20 00 50 00 55 T.M.L. .P.U 05876961 00 42 00 4C 00 49 00 43 00 20 00 .B.L.I.C. . 0587696C 22 00 2D 00 2F 00 2F 00 57 00 33 ".-././.W.3 05876977 00 43 00 2F 00 2F 00 44 00 54 00 .C././.D.T. 05876982 44 00 20 00 48 00 54 00 4D 00 4C D. .H.T.M.L 0587698D 00 20 00 33 00 2E 00 32 00 20 00 . .3...2. . 05876998 46 00 69 00 6E 00 61 00 6C 00 2F F.i.n.a.l./ 058769A3 00 2F 00 45 00 4E 00 22 00 3E 00 ./.E.N.".>. 058769AE 0D 00 0A 00 3C 00 68 00 74 00 6D ....<.h.t.m 058769B9 00 6C 00 3E 00 3C 00 68 00 65 00 .l.>.<.h.e. 058769C4 61 00 64 00 3E 00 3C 00 2F 00 68 a.d.>.<./.h 058769CF 00 65 00 61 00 64 00 3E 00 3C 00 .e.a.d.>.<. 058769DA 62 00 6F 00 64 00 79 00 3E 00 A0 b.o.d.y.>.  058769E5 00 20 00 3C 00 62 00 72 00 3E 00 . .<.b.r.>. 058769F0 0D 00 0A 00 3C 00 62 00 72 00 3E ....<.b.r.> 058769FB 00 0D 00 0A 00 3C 00 2F 00 62 00 .....<./.b. 05876A06 6F 00 64 00 79 00 3E 00 0D 00 0A o.d.y.>.... 05876A11 00 3C 00 2F 00 68 00 74 00 6D 00 .<./.h.t.m. 05876A1C 6C 00 3E 00 0D 00 0A 00 00 00 FD l.>.......ý
Changed platform and os to ALL.
OS: Mac System 8.6 → All
Hardware: Macintosh → All
put nsbeta3
Keywords: nsbeta3
I wrote a special case before alerting the user. If the initial conversion fails then it checks nbsp in the body text and replaces by space and try the second conversion. BTW, there is a leak in the patch, I need to repost a new one.
bad for CJK user. nsbeta3+ per i18n bug review meeting
Whiteboard: nsbeta3+
fix checked in
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Over to marina for verification. I don't think this occurs any more but please double-check.
QA Contact: momoi → marina
verified as fixed
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: