Put a special case before alert the user for charset conversion failure, bug 42871, r=ftang.